--- a/hugo.yaml
+++ b/hugo.yaml
@@ -24,9 +24,9 @@ menu:
     - name: Organizers
       pageRef: /organizers
       weight: 2
-    - name: Changelog
-      pageRef: /changelog
-      weight: 3
+    # - name: Changelog
+    #   pageRef: /changelog
+    #   weight: 3
     - name: Contact ↗
       url: "https://github.com/chatgpt4pcg"
       weight: 4
